--- a/src/app/component/stockmanagementform/stockmanagementform.component.html
+++ b/src/app/component/stockmanagementform/stockmanagementform.component.html
@@ -80,8 +80,8 @@
                   </td>
                   <td>
                     <select formControlName="costCenter" class="form-control">
-                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
-                      </option>
+                      <option *ngFor="let option of costCenterdropdown" [value]="option.CostCenter">{{
+                        option.CostCenter}}</option>
                     </select>
                   </td>
                   <td>
