--- a/src/app/component/temporaryform/temporaryform.component.html
+++ b/src/app/component/temporaryform/temporaryform.component.html
@@ -93,8 +93,7 @@
                     </td>
                     <td>
                       <select formControlName="costCenter" class="form-control">
-                        <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
-                        </option>
+                        <option *ngFor="let option of costCenterdropdown" [value]="option.CostCenter">{{ option.CostCenter}}</option>
                       </select>
                     </td>
                     <td>
@@ -166,8 +165,7 @@
                     </td>
                     <td>
                       <select formControlName="costCenter" class="form-control">
-                        <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
-                        </option>
+                        <option *ngFor="let option of costCenterdropdown" [value]="option.CostCenter">{{ option.CostCenter}}</option>
                       </select>
                     </td>
                     <td>
