--- a/src/app/pages/approvallist/approvallist.page.scss
+++ b/src/app/pages/approvallist/approvallist.page.scss
@@ -1,24 +1,19 @@
-table {
+.card {
+  min-height: 80vh;
+}
+
+
+.table {
   width: 100%;
   border-collapse: collapse;
-  margin: 0;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-
 }
 
-table tr {
-  border-bottom: 1px solid #ddd;
-  padding: .45em;
-
-
-}
-
-table th {
+.table th {
   text-align: center;
   padding: .625em;
   font-size: .85em;
   letter-spacing: .1em;
-  text-transform: uppercase;
+  text-transform: capitalize;
   background-color: #428bca !important;
   color: #000;
 }
@@ -27,11 +22,58 @@ tbody tr:nth-child(even) {
   background-color: #f5f5f5;
 }
 
-table th,
-table td {
-  padding: .625em;
-  text-align: center;
+.table th,
+.table td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+
 }
+
+.table th {
+  font-weight: bold;
+}
+
+.table-responsive {
+  overflow-x: auto;
+}
+
+.pagination-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination-buttons {
+  justify-content: space-between;
+  justify-content: flex-end;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 120px;
+  display: flex;
+  align-items: center;
+}
+
+
+.table th ion-icon[name^="arrow-"] {
+  color: red;
+  cursor: pointer;
+}
+
+.table th ion-icon {
+  color: rgb(241, 212, 17);
+  /* Default color */
+}
+
+.table th.ascending ion-icon[name^="arrow-"],
+.table th.descending ion-icon[name^="arrow-"] {
+  color: red;
+
+}
+
+
+
 
 
 @media (max-width:768px) {
@@ -48,7 +90,7 @@ table td {
     background-color: #c9ebfd;
   }
 
-  table td {
+  table tr td {
     text-align: right;
     display: block;
     font-size: 1em;
